--- a/app/src/main/res/layout/fragment_unit1.xml
+++ b/app/src/main/res/layout/fragment_unit1.xml
@@ -2239,7 +2239,8 @@
         android:scaleType="fitXY"
         android:src="@drawable/icon_line"
         app:backgroundTint="@android:color/transparent"
-        app:borderWidth="0dp" />
+        app:borderWidth="0dp"
+        android:visibility="gone"/>
 
 
 </RelativeLayout>
